--- a/frontend/components/checkins/checkinsAnswer-pug.component.pug
+++ b/frontend/components/checkins/checkinsAnswer-pug.component.pug
@@ -2,7 +2,7 @@
     .checkins-setup
         .header-setup
             .close-btn
-                a(ng-link='["Checkins List"]')
+                a(ng-click="checkinsAnswer.redirect()")
                     i.fa.fa-times.fa-2x
         p question: {{checkinsAnswer.question}}
         input(ckeditor,type="text",name="text" , cols='30', rows='10',ng-model="checkinsAnswer.body",
