--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -58,7 +58,7 @@
 			border 1px solid #212121
 			padding 7px 0
 			border-radius 7px
-			background-color #212121
+			background-color #67809f
 			color white
 			// overflow hidden
 			position relative
